cluster/environments/lab/edge/pve02-backend.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: pve02
  namespace: apps
subsets:
- addresses:
  - ip: 10.0.10.12
  ports:
  - name: https
    port: 8006
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: pve02
  namespace: apps
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: https
    traefik.ingress.kubernetes.io/service.serverstransport: apps-pve02-transport@kubernetescrd
spec:
  type: ClusterIP
  ports:
  - name: https
    port: 8006
    targetPort: 8006
    protocol: TCP
