cluster/environments/lab/edge/apt-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apt
  namespace: apps
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
  - host: apt.m0sh1.cc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apt
            port:
              number: 3142
  tls:
  - hosts:
    - apt.m0sh1.cc
    secretName: wildcard-m0sh1-cc
