cluster/environments/lab/edge/dns02-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dns02
  namespace: apps
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: dns02.m0sh1.cc
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dns02
                port:
                  number: 443
  tls:
    - hosts:
        - dns02.m0sh1.cc
      secretName: wildcard-m0sh1-cc
