cluster/environments/lab/edge/pbs-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pbs-01
  namespace: apps
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
  - host: pbs.lab.m0sh1.cc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pbs-01
            port:
              number: 8007
  tls:
  - hosts:
    - pbs.lab.m0sh1.cc
    secretName: wildcard-m0sh1-cc
