cluster/environments/lab/edge/pdm-01-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pdm-01
  namespace: apps
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: pdm-01.m0sh1.cc
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pdm-01
                port:
                  number: 8443
  tls:
    - hosts:
        - pdm-01.m0sh1.cc
      secretName: wildcard-m0sh1-cc
