cluster/environments/lab/edge/pve-02-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pve-02
  namespace: apps
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: pve-02.m0sh1.cc
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pve-02
                port:
                  number: 8006
  tls:
    - hosts:
        - pve-02.m0sh1.cc
      secretName: wildcard-m0sh1-cc
