cluster/environments/lab/edge/pve-scripts-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pve-scripts
  namespace: apps
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
  - host: pve-scripts.m0sh1.cc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pve-scripts
            port:
              number: 3000
  tls:
  - hosts:
    - pve-scripts.m0sh1.cc
    secretName: wildcard-m0sh1-cc
