cluster/environments/lab/edge/pve03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pve03
  namespace: apps
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
  - host: pve03.m0sh1.cc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pve03
            port:
              number: 8006
  tls:
  - hosts:
    - pve03.m0sh1.cc
    secretName: wildcard-m0sh1-cc
